...
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_detailed_profile"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorBackgroundStar"
        app:borderWidth="0dp"
        app:layout_anchor="@id/app_bar"
...
